fixUnitTests